# fashion_mnist_VGG16

./: fashion_vgg.keras  main.py  main_.py  pyproject.toml
